--- a/Product_Serivce/product_backend/package.json
+++ b/Product_Serivce/product_backend/package.json
@@ -13,6 +13,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cashfree-pg": "^4.3.10",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
